--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.0.10",
+    "next-axiom": "^1.9.3",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
