--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
+    "@axiomhq/js": "^1.3.1",
+    "dotenv": "^17.2.3",
     "next": "16.0.10",
-    "next-axiom": "^1.9.3",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
@@ -22,6 +25,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "tsx": "^4.21.0",
+    "typescript": "^5",
+    "vitest": "^4.0.15"
   }
 }
